--- a/HTML - Study Personal site/css/styles.css
+++ b/HTML - Study Personal site/css/styles.css
@@ -2,6 +2,7 @@
 h1 {
   color: #F68989;
   font-size: 100;
+
 }
 
 body {
@@ -25,4 +26,32 @@ body {
 
 #tableone:hover {
   background-color: #B6FFCE;
+}
+
+/*************Margin border and padding******/
+.top-container {
+border: solid 10px;
+padding: 20px;
+background-color: #C85C5C;
+width: 200px;
+height: 200px;
+}
+
+.middle-container {
+  border: solid 20px;
+  margin: 0 0 0 260px;
+background-color: #B2EA7027;
+width: 200px;
+height: 200px;
+
+}
+
+.bottom-container {
+  border: solid 10px;
+  margin: 0 0 0 500px;
+background-color: #006778;
+width: 200px;
+height: 200px;
+
+
 }
