--- a/HTML - Study Personal site/css/styles.css
+++ b/HTML - Study Personal site/css/styles.css
@@ -1,7 +1,13 @@
-/****** general css tag******/
+/****** Section 4: general css tag******/
 h1 {
   color: #F68989;
-  font-size: 100;
+  font-size: 50;
+
+}
+
+h2{
+  color: #F68989;
+  font-size: 50;
 
 }
 
@@ -40,7 +46,7 @@ height: 200px;
 .middle-container {
   border: solid 20px;
   margin: 0 0 0 260px;
-background-color: #B2EA7027;
+background-color: #95CD41;
 width: 200px;
 height: 200px;
 
@@ -53,5 +59,70 @@ background-color: #006778;
 width: 200px;
 height: 200px;
 
+}
+/***span as the specific words of a line then put in the middle then specific type in it-> create a class to modify it****/
+
+.section {
+text-decoration: underline;
+
+}
+/********Display has Block, Inline, Inline Block, None*****/
+h4 {
+background-color: #85C88A;
+width: 70px;
+display: inline-block;
+
+}
+.Block-1 {
+  display: none;
+}
+span{
+background-color: #FF8AAE;
+
+}
+
+/**************moving the picture by using Display and position*****/
+/********Relative position******/
+.top-container-2 {
+background-color: #C85C5C;
+width: 200px;
+height: 200px;
+position: relative;
+left: 600px;
+}
+
+.middle-container-2 {
+background-color: #95CD41;
+width: 200px;
+height: 200px;
+position: relative;
+bottom: 200px;
+left: 400px;
+
+}
+
+.bottom-container-2 {
+background-color: #006778;
+width: 200px;
+height: 200px;
+position: relative;
+left: 200px;
+bottom: 400px;
+
+}
+
+/***********Absolute position*****/
+.parent{
+background: #FFAFAF;
+width: 600px;
+height: 600px;
+position: relative;
+left: 600px;
+
+}
+.chillies{
+width: 200px;
+position: absolute;
+left: 300px;
 
 }
