--- a/Bootstrap/Bootstrap installation/css/styles.css
+++ b/Bootstrap/Bootstrap installation/css/styles.css
@@ -1,4 +1,10 @@
 h1{
   font: #F68989;
-  h1 {  font-family: 'Montserrat, sans-serif';  font-size: 3rem;  line-height: 1.5;  font-weight: 900;
+  font-family: 'Montserrat, sans-serif';
+  font-size: 3rem;
+  line-height: 1.5;
+  font-weight: 900;
+}
+.container-fluid{
+  padding: 3% 15%;
 }
